@@ -13,7 +13,7 @@ This function creates plots for one or more of the 'B AlleleFreq', 'Log R Ratio'
 \usage{
 chromIntensityPlot(intenData, scan.ids, chrom.ids, 
                    type = c("BAF/LRR", "BAF", "LRR", "R", "Theta", "R/Theta"), 
-                   code = NULL, main.txt = NULL, 
+                   main = NULL, info = NULL, 
                    abln = NULL,  horizln = c(1/2, 1/3, 2/3), 
                    colorGenotypes = FALSE, genoData = NULL,
                    colorBatch = FALSE, batch.column = NULL,
@@ -27,8 +27,9 @@ chromIntensityPlot(intenData, scan.ids, chrom.ids,
   \item{scan.ids}{ A vector containing the sample indices of the plots.}
   \item{chrom.ids}{ A vector containing the chromosome indices of the plots.}
   \item{type}{ The type of plot to be created.  'BAF/LRR' creates both 'B Allele Freq' and 'Log R Ratio' plots. 'R/Theta' creates both 'R' and 'Theta' plots. }
-  \item{code}{ A character vector containing extra information to include in the main title. }
-  \item{main.txt}{ Text that will be written in the title on all plots created. If \code{NULL} then the title will be the sample number and the chromosome.}
+  \item{main}{ Vector of plot titles. If \code{NULL} then the title will
+  include scanID, sex, and chromosome.}
+  \item{info}{ A character vector containing extra information to include in the main title. }
   \item{abln}{A vector of values that is of length \code{2*length(scan.ids)}.  Each pair of entries specifies where vertical lines will be drawn in each plot.
 This is especially useful when drawing the start \& end breakpoints for anomalies, for example. 
 Use -1 as one pair value for plots that warrant only one line. By default, no lines will be drawn. }
@@ -74,7 +75,7 @@ genoData <-  GenotypeData(genonc, scanAnnot=illuminaScanADF)
 
 scanID <- getScanID(illuminaScanADF, index=1)
 chromIntensityPlot(intenData=intenData, scan.ids=scanID,
-                   chrom.ids=22, type="BAF/LRR", code="interesting sample",
+                   chrom.ids=22, type="BAF/LRR", info="interesting sample",
                    colorGenotypes=TRUE, genoData=genoData)
 close(genoData)
 close(intenData)
